# Face_recognition_system

./: README.md  pyproject.toml  req.txt
