[project]
name = "face-recognition-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "face-recognition>=1.3.0",
    "flask>=3.1.0",
    "imutils>=0.5.4",
    "mysql>=0.0.3",
    "mysql-connector>=2.2.9",
    "opencv-python>=4.11.0.86",
    "setuptools>=80.4.0",
]
